# Gendiff

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main-check.yml
gendiff/: __init__.py  diff.py  parser.py
gendiff/engine/: generate_diff.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/expected/json/: to_json.json
