[tool.poetry]
name = "hexlete-code"
version = "0.1.0"
description = ""
authors = ["Nikolay Zemelko zemelko1989gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
