[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nikolay Zemelko zemelko1989gmail.com"]
license = "MIT"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.8.1"
PyYAML = "^6.0"
pytest = "^7.2.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
